--- a/AKchatApp/src/app/upload-gallery/upload-gallery.component.css
+++ b/AKchatApp/src/app/upload-gallery/upload-gallery.component.css
@@ -5,9 +5,10 @@
     height: 200px;
     width: 200px;
     border-radius: 12px;
-    border: solid grey 1px;
-    background-color: rgb(225, 225, 225);
+    /* border: solid grey 1px; */
+    /* background-color: rgb(225, 225, 225); */
     position: relative;
+    box-shadow: 10px 10px 5px rgb(172, 172, 172);
 }
 
 .image-input{
@@ -26,4 +27,111 @@
     position: absolute;
 
 
+}
+
+.afterclick{
+    width: 50%;
+}
+.afterclick1{
+    height: 400px;width: 50%;background-color: rgb(255, 255, 255);
+}
+
+
+
+
+/* for grid */
+
+.grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Adjust the gap between items */
+    justify-content: space-between; /* To evenly distribute items */
+  }
+  
+  /* Individual grid items */
+  .grid-item {
+    flex: 0 0 calc(33.3333% - 20px); /* Three columns with gap accounted for */
+    border: solid black 1px;
+    box-shadow: 3px 4px 12px grey;
+    border-radius: 12px;
+    background-color: white;
+  }
+
+
+
+
+  
+
+
+/* CSS */
+.button-92 {
+  --c: #fff;
+  /* text color */
+  background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p,100%)/300% no-repeat,
+    green;
+  /* background color */
+  color: #0000;
+  border: none;
+  transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
+  text-shadow: calc(var(--_i,-1)* 0.08em) -.01em 0   var(--c),
+    calc(var(--_i,-1)*-0.08em)  .01em 2px #0004;
+  outline-offset: .1em;
+  transition: 0.3s;
+}
+
+.button-92:hover,
+.button-92:focus-visible {
+  --_p: 0%;
+  --_i: 1;
+}
+
+.button-92:active {
+  text-shadow: none;
+  color: var(--c);
+  box-shadow: inset 0 0 9e9q #0005;
+  transition: 0s;
+}
+
+.button-92 {
+  font-weight: bold;
+  font-size: 2rem;
+  margin: 0;
+  cursor: pointer;
+  padding: .1em .3em;
+}
+
+
+
+
+
+/* CSS */
+.button-41 {
+  background-color: initial;
+  background-image: linear-gradient(-180deg, #00D775, #00BD68);
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Inter,-apple-system,system-ui,Roboto,"Helvetica Neue",Arial,sans-serif;
+  height: 44px;
+  line-height: 44px;
+  outline: 0;
+  overflow: hidden;
+  padding: 0 20px;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: top;
+  white-space: nowrap;
+  width: fit-content;
+  z-index: 9;
+  border: 0;
+}
+
+.button-41:hover {
+  background: #02b162;
 }
