--- a/AKchatApp/src/app/notification/notification.component.html
+++ b/AKchatApp/src/app/notification/notification.component.html
@@ -104,6 +104,17 @@
             <span style="margin-left: auto;margin-bottom: auto;margin-top: auto;" (click)="toggle(msg.id)"><i
                     class="bi bi-x-circle"></i></span>
         </ng-container>
+        <ng-container *ngIf="msg.status===10">
+            <span style="margin-bottom: auto;margin-top: auto;"><img src='/assets/img/cancel.png'
+                    style="width:32px;height:28px;"></span>
+            <div>
+                <div class="text-black fw-bolder">{{msg.name?.toUpperCase()}}</div>
+                <div class="text-black">{{msg.content}}</div>
+            </div>
+
+            <span style="margin-left: auto;margin-bottom: auto;margin-top: auto;" (click)="toggle(msg.id)"><i
+                    class="bi bi-x-circle"></i></span>
+        </ng-container>
 
     </div>
 </div>
