--- a/AKchatApp/src/app/registeration-page/registeration-page.component.html
+++ b/AKchatApp/src/app/registeration-page/registeration-page.component.html
@@ -59,7 +59,7 @@
 
 
                 <div class=" mb-3 d-flex" style="border: solid rgb(185, 185, 185) 1px;border-radius: 5px;">
-                    <i class="bi bi-person-fill"
+                    <i class="bi bi-key-fill"
                         style="font-size: x-large;border-right: solid rgb(185, 185, 185) 1px;padding: 5px;"></i>
 
                     <!-- <input style="padding: 0px;" matInput formControlName="email"> -->
