--- a/AKchatApp/src/app/my-posts/my-posts.component.html
+++ b/AKchatApp/src/app/my-posts/my-posts.component.html
@@ -21,7 +21,7 @@
                             </span>
                             <div class="card me-2 mb-2"
                                 style="width: 190px;height: 190px;border-radius: 12px; display: flex;justify-content: center;">
-                                <img style="width: 190px;height: 190px;border-radius: 12px;" class="card-img-top"
+                                <img style="width: 100%;height: 190px;border-radius: 12px;" class="card-img-top"
                                     [src]="data.imgstr">
 
                             </div>
