--- a/AKchatApp/src/app/photo-gallery/photo-gallery.component.html
+++ b/AKchatApp/src/app/photo-gallery/photo-gallery.component.html
@@ -23,10 +23,15 @@
                 <div class="card mt-3 " style="width: fit-content;height: fit-content;">
                     <div class="m-3 justify-content-between d-flex">
                         <div class="d-flex align-items-center">
-                            <img class="user-image me-2" [src]="data.userimage" alt="">
-
-                            <span class="navbar-brand me-1">{{ data.uploadedUser }}</span>
-                            <span *ngIf="data.tagnames" class="navbar-brand" >has tagged <span class="fw-bolder">{{data.tagnames}}</span></span>
+                            <ng-container *ngIf="data.userimage;else noofflineuser">
+                                <img class="user-image me-2" [src]="data.userimage" alt="">
+                            </ng-container>
+                            <ng-template #noofflineuser>
+                                <div class="user-text me-2">{{data.uploadedUser.charAt(0)}}</div>
+                            </ng-template>
+                            <span class="navbar-brand fw-bolder me-1">{{ data.uploadedUser }}</span>
+                            <span *ngIf="data.tagnames" class="navbar-brand">has tagged <span
+                                    class="fw-bolder">{{data.tagnames}}</span></span>
                         </div>
                         <span *ngIf="data.uploadedUser.trim() === service.myName.trim()"
                             style="position: absolute;top: 5px;right: 5px;z-index: 22; ;color: red;">
